--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "pyside6>=6.5.3",
     "python-docx>=1.1.0",
+    "tqdm>=4.67.1",
     "whoosh>=2.7.4",
 ]
