--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.7"
 dependencies = [
     "pyside6>=6.5.3",
     "python-docx>=1.1.0",
+    "qt-material>=2.14",
+    "qtawesome>=1.4.0",
     "tqdm>=4.67.1",
     "whoosh>=2.7.4",
 ]
