--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "mysql-connector-python>=8.0.33",
     "pyside6>=6.5.3",
     "python-docx>=1.1.0",
     "qt-material>=2.14",
