--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mysql-connector-python>=8.0.33",
     "pyinstaller>=5.13.2",
     "pyinstaller-hooks-contrib>=2024.7",
+    "pypdf2>=3.0.1",
     "pyside6>=6.5.3",
     "python-docx>=1.1.0",
     "python-dotenv>=0.21.1",
