--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,18 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "mammoth>=1.9.0",
     "mysql-connector-python>=8.0.33",
+    "pillow>=9.5.0",
     "pyinstaller>=5.13.2",
     "pyinstaller-hooks-contrib>=2024.7",
+    "pymupdf>=1.22.5",
     "pypdf2>=3.0.1",
+    "pyqtdarktheme>=2.1.0",
     "pyside6>=6.5.3",
     "python-docx>=1.1.0",
     "python-dotenv>=0.21.1",
+    "pywin32>=310",
     "qt-material>=2.14",
     "qtawesome>=1.4.0",
     "tqdm>=4.67.1",
