--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pywin32>=310",
     "qt-material>=2.14",
     "qtawesome>=1.4.0",
+    "textract>=1.6.5",
     "tqdm>=4.67.1",
     "watchdog>=3.0.0",
     "whoosh>=2.7.4",
